--- a/fastcgi/tests/htmltest.html
+++ b/fastcgi/tests/htmltest.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8"/>
 <title>
-DB2UTIL-RPGCGI
+DB2UTIL-FastCGI
 </title>
 </head>
 <body>
-<form action="http://ut28p63/db2/db2util.pgm" accept-charset="utf-8" method="post">
+<form action="http://ut28p63/ibm.db2" accept-charset="utf-8" method="post">
 <input type="hidden" name="json" id="json" />
 <input type="submit" value="test post" />
 </form>
